--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -b master -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -24,5 +26,8 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "homepage" : "http://freac212.github.io/react-booklibrary-app"
+  "homepage": "http://freac212.github.io/react-booklibrary-app",
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
+  }
 }
